Added Refresh Token capabilities and added username to login and register request
