# controllers/authentication.js
@@ -1,6 +1,7 @@
-// The code in this file was reused from CS465 Full Stack Guide Module5
+// Some of the code in this file was reused from CS465 Full Stack Guide Module5
 const User = require("../models/user");
 const passport = require("passport");
+const jwt = require("jsonwebtoken"); // Enable JSON Web Tokens
 
 const register = async (req, res) => {
   // Validate message to insure that all parameters are present
@@ -17,8 +18,9 @@ const register = async (req, res) => {
   });
 
   user.setPassword(req.body.password); // Set user password
-
-  const q = await user.save();
+  // the next line is not from CS465 FullStack Guide
+  const refreshToken = user.generateRefreshToken(); // generate refresh token
+  const q = await user.save(); //save user data and refresh token
 
   if (!q) {
     // Database returned no data
@@ -26,17 +28,18 @@ const register = async (req, res) => {
   } else {
     // Return new user token
     const token = user.generateJWT();
-    return res.status(200).json({ token });
+    // the next line is not from CS465 FullStack Guide
+    return res.status(200).json({ token, refreshToken, userName: user.name });
   }
 };
 
-const login = (req, res) => {
+const login = async (req, res) => {
   // Validate message to ensure that email and password are present.
   if (!req.body.email || !req.body.password) {
     return res.status(400).json({ message: "All fields required" });
   }
   // Delegate authentication to passport module
-  passport.authenticate("local", (err, user, info) => {
+  passport.authenticate("local", async (err, user, info) => {
     if (err) {
       // Error in Authentication Process
       return res.status(404).json(err);
@@ -44,7 +47,10 @@ const login = (req, res) => {
     if (user) {
       // Auth succeeded - generate JWT and return to caller
       const token = user.generateJWT();
-      res.status(200).json({ token });
+      // the following three lines are not from CS465 FullStack Guide
+      const refreshToken = user.generateRefreshToken();
+      await user.save(); // Save the refresh token to the user document
+      res.status(200).json({ token, refreshToken, userName: user.name });
     } else {
       // Auth failed return error
       res.status(401).json(info);
@@ -52,7 +58,40 @@ const login = (req, res) => {
   })(req, res);
 };
 
+// This code is not from CS465 FullStack Guide
+const refreshToken = async (req, res) => {
+  // Get the user id that the middleware for refresh token attached to the req obj
+  const { userId } = req;
+
+  //if the userId is not present then there is a Refresh Token error
+  if (!userId) {
+    return res.status(400).json({ error: "Refresh token required" });
+  }
+
+  try {
+    // Find the user
+    const user = await User.findById(userId);
+
+    // if there is no user, the refresh token is invalid send error
+    if (!user) {
+      return res.status(403).json({ error: "Invalid refresh token" });
+    }
+
+    // Generate new access token
+    const newToken = user.generateJWT();
+    const newRefreshToken = user.generateRefreshToken();
+    await user.save();
+    return res
+      .status(200)
+      .json({ token: newToken, refreshToken: newRefreshToken });
+  } catch (err) {
+    //console.log("error", err.message);
+    return res.status(500).json({ error: "Invalid or expired refresh token" });
+  }
+};
+
 module.exports = {
   register,
   login,
+  refreshToken,
 };
