# routes/index.js
@@ -20,7 +20,7 @@ function authenticateJWT(req, res, next) {
   const token = authHeader.split(" ")[1];
   // console.log('Token: ' + token);
   if (token == null) {
-    console.log("Null Bearer Token");
+    //console.log("Null Bearer Token");
     return res.sendStatus(401);
   }
 
@@ -36,10 +36,45 @@ function authenticateJWT(req, res, next) {
   );
   next(); // We need to continue or this will hang forever
 }
+
+// the next function is not from CS465 FullStack Guide
+// refresh token middleware
+function validateRefreshToken(req, res, next) {
+  // get the token from body
+  const refreshToken = req.body.refreshToken;
+
+  // bad request if token is not present
+  if (!refreshToken) {
+    return res.status(400).json({ error: "Refresh token required" });
+  }
+
+  //decode the token and add userId to request object
+  jwt.verify(refreshToken, process.env.JWT_REFRESH_SECRET, (err, decoded) => {
+    if (err) {
+      console.error("Refresh token verification failed:", err.message);
+      return res.status(403).json({
+        error: "Invalid refresh token",
+        details: err.message,
+      });
+    }
+
+    if (!decoded.userId) {
+      return res.status(403).json({ error: "Token missing required user ID" });
+    }
+
+    req.userId = decoded.userId;
+    next();
+  });
+}
+
 const authController = require("../controllers/authentication");
 
 router.route("/register").post(authController.register);
 router.route("/login").post(authController.login);
+// the next line is not from CS465 FullStack Guide
+router
+  .route("/refresh-token")
+  .post(validateRefreshToken, authController.refreshToken);
 
 // Code not from CS465
 const inventoryController = require("../controllers/inventory");
